--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,15 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.0"
-//        classpath("javax.inject.Inject;")
+        classpath "io.reactivex.rxjava2:rxjava:2.2.8"
+        classpath "io.reactivex.rxjava2:rxandroid:2.0.2"
+        classpath "com.squareup.rx.idler:rx2-idler:0.9.1"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
-
+//compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.1'
 allprojects {
     repositories {
         google()
